--- a/index.html
+++ b/index.html
@@ -435,3 +435,327 @@ box-sizing: border-box;
         100% { transform: rotate(360deg); }
     }
 </style>
+</head>
+<body>
+<header>
+<nav class="container">
+<div class="logo">Alex's Journal</div>
+<ul class="nav-links">
+<li><a href="#home">Home</a></li>
+<li><a href="#blog">Blog</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+</nav>
+</header>
+<section class="hero" id="home">
+    <div class="container">
+        <div class="hero-content">
+            <h1>Welcome to My Digital Journey</h1>
+            <p class="motto" id="daily-motto">"Every day is a new opportunity to learn, grow, and inspire."</p>
+            <a href="#blog" class="cta-button">Explore My Thoughts</a>
+        </div>
+    </div>
+</section>
+
+<main>
+    <div class="container content-wrapper">
+        <section class="search-filter-section">
+            <div class="search-container">
+                <div class="search-box">
+                    <input type="text" id="search-input" placeholder="Search articles...">
+                    <span class="search-icon">🔍</span>
+                </div>
+            </div>
+            <div class="category-filters">
+                <button class="category-btn active" data-category="all">All</button>
+                <button class="category-btn" data-category="technology">Technology</button>
+                <button class="category-btn" data-category="lifestyle">Lifestyle</button>
+                <button class="category-btn" data-category="travel">Travel</button>
+                <button class="category-btn" data-category="personal">Personal</button>
+                <button class="category-btn" data-category="reviews">Reviews</button>
+            </div>
+        </section>
+
+        <section id="blog">
+            <div class="loading">
+                <div class="spinner"></div>
+                <p>Loading articles...</p>
+            </div>
+            <div class="blog-grid" id="blog-grid">
+                <!-- Blog posts will be dynamically loaded here -->
+            </div>
+        </section>
+
+        <section class="about-section" id="about">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>
+                    Hi! I'm Alex, a passionate writer and tech enthusiast sharing my journey through life, technology, and everything in between.
+                    This blog is my digital canvas where I paint stories, share insights, and connect with amazing people like you.
+                    Join me as we explore the fascinating world around us, one post at a time.
+                </p>
+            </div>
+        </section>
+    </div>
+</main>
+
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <p><a href="#home">Home</a></p>
+                <p><a href="#blog">Blog</a></p>
+                <p><a href="#about">About</a></p>
+                <p><a href="#contact">Contact</a></p>
+            </div>
+            <div class="footer-section">
+                <h3>Categories</h3>
+                <p><a href="#" data-category="technology">Technology</a></p>
+                <p><a href="#" data-category="lifestyle">Lifestyle</a></p>
+                <p><a href="#" data-category="travel">Travel</a></p>
+                <p><a href="#" data-category="personal">Personal</a></p>
+            </div>
+            <div class="footer-section">
+                <h3>Connect</h3>
+                <p><a href="#">Twitter</a></p>
+                <p><a href="#">LinkedIn</a></p>
+                <p><a href="#">GitHub</a></p>
+                <p><a href="#">Email</a></p>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2025 Alex's Digital Journal. All rights reserved. Built with ❤️ and lots of coffee.</p>
+        </div>
+    </div>
+</footer>
+
+<script>
+    // Sample blog data
+    const blogPosts = [
+        {
+            id: 1,
+            title: "The Future of Web Development",
+            excerpt: "Exploring the latest trends and technologies shaping the future of web development, from AI integration to progressive web apps.",
+            category: "technology",
+            date: "2025-06-15",
+            readTime: "5 min read",
+            image: "Tech Article"
+        },
+        {
+            id: 2,
+            title: "Minimalist Living: A Year Later",
+            excerpt: "Reflecting on my journey with minimalism and how it has transformed my daily life, relationships, and overall well-being.",
+            category: "lifestyle",
+            date: "2025-06-12",
+            readTime: "7 min read",
+            image: "Lifestyle Guide"
+        },
+        {
+            id: 3,
+            title: "Hidden Gems of Tokyo",
+            excerpt: "Discovering the lesser-known spots in Tokyo that offer authentic experiences away from the typical tourist trails.",
+            category: "travel",
+            date: "2025-06-10",
+            readTime: "6 min read",
+            image: "Travel Story"
+        },
+        {
+            id: 4,
+            title: "My Morning Routine Revolution",
+            excerpt: "How I completely transformed my mornings and why it became the key to unlocking better productivity and happiness.",
+            category: "personal",
+            date: "2025-06-08",
+            readTime: "4 min read",
+            image: "Personal Story"
+        },
+        {
+            id: 5,
+            title: "MacBook Pro M3 Review",
+            excerpt: "An in-depth review of Apple's latest MacBook Pro with M3 chip, covering performance, battery life, and value for creators.",
+            category: "reviews",
+            date: "2025-06-05",
+            readTime: "8 min read",
+            image: "Product Review"
+        },
+        {
+            id: 6,
+            title: "The Art of Digital Detox",
+            excerpt: "Learning to disconnect from the digital world and reconnect with ourselves in an increasingly connected society.",
+            category: "lifestyle",
+            date: "2025-06-03",
+            readTime: "5 min read",
+            image: "Wellness Article"
+        }
+    ];
+
+    // Daily mottos
+    const mottos = [
+        "Every day is a new opportunity to learn, grow, and inspire.",
+        "The journey of a thousand miles begins with a single step.",
+        "Success is not final, failure is not fatal: it is the courage to continue that counts.",
+        "The only way to do great work is to love what you do.",
+        "Innovation distinguishes between a leader and a follower.",
+        "The future belongs to those who believe in the beauty of their dreams.",
+        "Life is what happens to you while you're busy making other plans."
+    ];
+
+    // Initialize the page
+    document.addEventListener('DOMContentLoaded', function() {
+        loadDailyMotto();
+        loadBlogPosts();
+        setupSearch();
+        setupCategoryFilters();
+        setupSmoothScrolling();
+    });
+
+    // Load daily motto
+    function loadDailyMotto() {
+        const today = new Date();
+        const dayOfYear = Math.floor((today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24);
+        const mottoIndex = dayOfYear % mottos.length;
+        document.getElementById('daily-motto').textContent = `"${mottos[mottoIndex]}"`;
+    }
+
+    // Load blog posts
+    function loadBlogPosts(posts = blogPosts) {
+        const blogGrid = document.getElementById('blog-grid');
+        const loading = document.querySelector('.loading');
+
+        loading.style.display = 'block';
+        blogGrid.innerHTML = '';
+
+        setTimeout(() => {
+            loading.style.display = 'none';
+
+            if (posts.length === 0) {
+                blogGrid.innerHTML = '<p style="text-align: center; color: #666; grid-column: 1 / -1;">No articles found matching your criteria.</p>';
+                return;
+            }
+
+            posts.forEach(post => {
+                const blogCard = createBlogCard(post);
+                blogGrid.appendChild(blogCard);
+            });
+        }, 500);
+    }
+
+    // Create blog card element
+    function createBlogCard(post) {
+        const card = document.createElement('div');
+        card.className = 'blog-card';
+        card.innerHTML = `
+            <div class="blog-image">${post.image}</div>
+            <div class="blog-content">
+                <span class="blog-category">${post.category}</span>
+                <h3 class="blog-title">${post.title}</h3>
+                <p class="blog-excerpt">${post.excerpt}</p>
+                <div class="blog-meta">
+                    <span>${formatDate(post.date)}</span>
+                    <a href="#" class="read-more">${post.readTime}</a>
+                </div>
+            </div>
+        `;
+
+        card.addEventListener('click', () => {
+            alert(`Opening: ${post.title}\\n\\nThis would navigate to the full article in a real implementation.`);
+        });
+
+        return card;
+    }
+
+    // Format date
+    function formatDate(dateString) {
+        const date = new Date(dateString);
+        return date.toLocaleDateString('en-US', {
+            year: 'numeric',
+            month: 'long',
+            day: 'numeric'
+        });
+    }
+
+    // Setup search functionality
+    function setupSearch() {
+        const searchInput = document.getElementById('search-input');
+        let searchTimeout;
+
+        searchInput.addEventListener('input', function() {
+            clearTimeout(searchTimeout);
+            searchTimeout = setTimeout(() => {
+                const query = this.value.toLowerCase().trim();
+                const activeCategory = document.querySelector('.category-btn.active').dataset.category;
+                filterPosts(query, activeCategory);
+            }, 300);
+        });
+    }
+
+    // Setup category filters
+    function setupCategoryFilters() {
+        const categoryBtns = document.querySelectorAll('.category-btn');
+
+        categoryBtns.forEach(btn => {
+            btn.addEventListener('click', function() {
+                categoryBtns.forEach(b => b.classList.remove('active'));
+                this.classList.add('active');
+
+                const searchQuery = document.getElementById('search-input').value.toLowerCase().trim();
+                const category = this.dataset.category;
+                filterPosts(searchQuery, category);
+            });
+        });
+    }
+
+    // Filter posts based on search and category
+    function filterPosts(searchQuery, category) {
+        let filteredPosts = blogPosts;
+
+        // Filter by category
+        if (category !== 'all') {
+            filteredPosts = filteredPosts.filter(post => post.category === category);
+        }
+
+        // Filter by search query
+        if (searchQuery) {
+            filteredPosts = filteredPosts.filter(post =>
+                post.title.toLowerCase().includes(searchQuery) ||
+                post.excerpt.toLowerCase().includes(searchQuery) ||
+                post.category.toLowerCase().includes(searchQuery)
+            );
+        }
+
+        loadBlogPosts(filteredPosts);
+    }
+
+    // Setup smooth scrolling
+    function setupSmoothScrolling() {
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    }
+
+    // Header scroll effect
+    window.addEventListener('scroll', function() {
+        const header = document.querySelector('header');
+        if (window.scrollY > 100) {
+            header.style.background = 'rgba(255, 255, 255, 0.98)';
+            header.style.boxShadow = '0 4px 30px rgba(0, 0, 0, 0.15)';
+        } else {
+            header.style.background = 'rgba(255, 255, 255, 0.95)';
+            header.style.boxShadow = '0 4px 30px rgba(0, 0, 0, 0.1)';
+        }
+    });
+</script>
+</body>
+</html>
+
+    
