--- a/index.html
+++ b/index.html
@@ -435,7 +435,20 @@ box-sizing: border-box;
         100% { transform: rotate(360deg); }
     }
 </style>
+
 </head>
+<body>
+<header>
+<nav class="container">
+<div class="logo">Alex's Journal</div>
+<ul class="nav-links">
+<li><a href="#home">Home</a></li>
+<li><a href="#blog">Blog</a></li>
+<li><a href="#about">About</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+</nav>
+</header
 <body>
 <header>
 <nav class="container">
@@ -757,5 +770,3 @@ box-sizing: border-box;
 </script>
 </body>
 </html>
-
-    
